# data-station-specification

./: .gitignore  404.html  README.md  TRANSLATION.md  data-station-specification.bib  hooks.py  index.html  justfile  mkdocs.yml  pyproject.toml  sitemap.xml  spell_check.py  translate_svgs.py
.github/workflows/: publish.yml
docs/: data-stations-als-hoeksteen.en.md  data-stations-als-hoeksteen.md  index.en.md  index.md  leeswijzer.en.md  leeswijzer.md  scope.en.md  scope.md  scratch.en.md  scratch.md  waarom.en.md  waarom.md
docs/appendix/: tehdas2-hdab.en.md  tehdas2-hdab.md  tehdas2-requirements.md  tehdas2-spe.en.md  tehdas2-spe.md
docs/applicatie/: catalogus.en.md  catalogus.md  daams.en.md  daams.md  data-station.en.md  data-station.md  federatief-leren.en.md  federatief-leren.md  federatieve-analyse.en.md  index.en.md  index.md  processing-hub.en.md  processing-hub.md
docs/architecture/: index.md  motivation.md  standards.md
docs/architectuur/: aanvragen.md  daams.md  data-station.md  fap.md  index.en.md  index.md  motivatie.md  ontdekken.md  principes.en.md  principes.md  publiceren.md  use-case.md
docs/componenten/: index.en.md  index.md
docs/discussie/: centraal-vs-decentraal.en.md  centraal-vs-decentraal.md  centraal-vs-federatief.md  dataspace-initiatieven.en.md  dataspace-initiatieven.md  index.en.md  index.md  ontwikkelagenda.en.md  ontwikkelagenda.md  permit-vs-request.en.md  permit-vs-request.md  primair-vs-secundair.en.md  primair-vs-secundair.md
docs/proces/: index.md  (+12 more)
includes/: woordenlijst.en.md  woordenlijst.md
overrides/: main.html
(+58 files in other folders)
