[project]
name = "data-station-specification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs-bibtex>=4.4.0",
    "mkdocs-material",
]

[tool.uv.sources]
mkdocs-material = { git = "https://${GH_TOKEN}@github.com/health-ri/mkdocs-material-insiders" }
