[project]
name = "data-station-specification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs-bibtex>=4.4.0",
    "mkdocs-glightbox>=0.5.1",
    "mkdocs-material",
    "mkdocs-puml>=2.3.0",
    "mkdocs-static-i18n>=1.3.0",
]

[tool.uv.sources]
mkdocs-material = { git = "https://github.com/health-ri/mkdocs-material-insiders" }
