[project]
name = "data-station-specification"
version = "0.1.0"
description = "Specification for data stations: federated infrastructure for secondary use of healthcare data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mkdocs-bibtex>=4.4.0",
    "mkdocs-glightbox>=0.5.1",
    "mkdocs-material",
    "mkdocs-pdf>=0.1.2",
    "mkdocs-puml>=2.3.0",
    "mkdocs-static-i18n>=1.3.0",
    "mkdocs-video>=1.5.0",
]
